fix map-maker input spacing based on lang

--- a/assets/src/styles/charcoal/admin/components/_map-maker.scss
+++ b/assets/src/styles/charcoal/admin/components/_map-maker.scss
@@ -46,5 +46,9 @@
 
 .c-map-maker_input {
     display: inline-block;
-    width: calc(100% - 242px);
+    width: calc(100% - 276px);
+
+    [lang='en'] & {
+        width: calc(100% - 244px);
+    }
 }
